--- a/package.json
+++ b/package.json
@@ -1,26 +1,43 @@
 {
-  "name": "vueapp",
+  "name": "webpackdemo",
   "version": "1.0.0",
-  "description": "",
+  "description": "a webpack demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack --config webpack.prod.js",
+    "dev": "webpack-dev-server --open --config webpack.dev.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yangchunboy/vueApp.git"
+    "url": "git+https://github.com/yangchunboy/webpackDemo.git"
   },
   "keywords": [
-    "vue"
+    "webpack"
   ],
   "author": "chuck",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/yangchunboy/vueApp/issues"
+    "url": "https://github.com/yangchunboy/webpackDemo/issues"
   },
-  "homepage": "https://github.com/yangchunboy/vueApp#readme",
+  "homepage": "https://github.com/yangchunboy/webpackDemo#readme",
+  "dependencies": {
+    "less": "^3.9.0"
+  },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.0",
+    "autoprefixer": "^9.4.2",
+    "babel-loader": "^8.0.4",
+    "clean-webpack-plugin": "^1.0.0",
+    "css-loader": "^2.0.1",
+    "html-webpack-plugin": "^3.2.0",
+    "less-loader": "^4.1.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "webpack": "^4.27.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.5"
   }
 }
